applications/mlflow/overlays/local/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-minio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.il/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: minio.local # mapped to minikube url in /etc/hosts
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio-service
              port: 
                number: 9000
